<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".BaseActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_profile"
          android:title="@string/action_profile"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_login"
          android:title="@string/action_login"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_companies"
          android:title="@string/action_companies"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_coupons"
          android:title="@string/action_coupons"
          android:orderInCategory="100"
          app:showAsAction="never"/>

</menu>
