<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.project.bitcoupon.bitcoupon.controllers.CompanyActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="32dp">

        <Button
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:id="@+id/buttonBack"
            android:layout_gravity="right"
            android:background="#FE980F"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/button_coupon"
            android:id="@+id/buttonCoupon"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#FE980F"
            android:textColor="#ffffff" />
    </RelativeLayout>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_filter"
        android:id="@+id/edit_text_filter"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="369dp"
        android:id="@+id/list_view_companies">

    </ListView>
</LinearLayout>